# helios-performance-hub

./: .gitignore  Build_EXE.cmd  CHANGELOG.md  CONTRIBUTING.md  Install_Helios.ps1  Install_and_Run.cmd  LICENSE  Migrate_Develop_And_Publish.ps1  Migrate_To_Production.cmd  PRODUCTION.md  Publish_Update.cmd  README.md  README_FIX.txt  README_SIGNING_FIX.txt  RELEASE_NOTES.md  Repair_Release_Signing.cmd  Run_Helios.cmd  SECURITY.md  START_HERE.txt  Setup_Update_Repository.cmd  Setup_Update_Repository.ps1  UPDATE_SYSTEM.md  Uninstall_Helios.cmd  Uninstall_Helios.ps1  helios_launcher.py  helios_performance_hub.py  helios_release.py  helios_update.py  helios_update_worker.py  pyproject.toml  release.json  release_public_key.pem  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
helios_core/: __init__.py  production.py  signing.py
tests/: test_production_runtime.py  test_update_system.py
