[project]
name = "helios-performance-control-hub"
version = "5.0.0"
description = "Always-on Windows performance, stability, and resource-management control hub"
requires-python = ">=3.11"
dependencies = [
  "psutil>=7.0,<8",
  "pystray>=0.19,<1",
  "Pillow>=11,<13",
  "cryptography>=42,<50",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["build", "dist", "release_artifacts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
